minor gui fixes